--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,43 @@
-html,
-body {
-  padding: 0;
+@import url("https://use.fontawesome.com/releases/v5.15.2/css/all.css");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  max-width: 2000px;
+  margin: 0 auto;
+  padding: 0px 50px;
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  background-color: #f7f8fc;
+  color: black;
+}
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+body::-webkit-scrollbar-track {
+  background-color: #f7f8fc;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #333333;
+  border-radius: 5px;
+}
+
+body.modalIsToggled {
+  overflow: hidden;
+}
+
+ul,
+li {
+  list-style: none;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+  color: white;
 }
