--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -5,8 +5,15 @@
   margin-bottom: 20px;
 
   .logo {
+    display: flex;
+    align-items: center;
     img {
+      margin-right: 10px;
       width: 50px;
+    }
+
+    p {
+      font-weight: bold;
     }
   }
 
@@ -14,9 +21,13 @@
     ul {
       display: flex;
 
+      a,
       li {
+        color: black;
         padding: 10px;
         margin: 10px 20px;
+        font-size: 18px;
+        cursor: pointer;
       }
     }
   }
