--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -36,3 +36,12 @@
   color: rgba(0, 0, 0, 0.65);
   transform: translateY(0);
 }
+
+.button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+
+  &:hover {
+    transform: translateY(0px);
+  }
+}
