--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -7,6 +7,7 @@
   .logo {
     display: flex;
     align-items: center;
+    cursor: pointer;
     img {
       margin-right: 10px;
       width: 50px;
