--- a/components/Searchbar/Searchbar.module.scss
+++ b/components/Searchbar/Searchbar.module.scss
@@ -36,6 +36,11 @@
       font-weight: bold;
       text-transform: uppercase;
       margin-top: 10px;
+
+      span {
+        font-size: 16px;
+        font-weight: 400;
+      }
     }
 
     .price {
@@ -46,17 +51,13 @@
       flex-direction: row;
 
       input {
-        width: 70%;
+        width: 100%;
         border: none;
         outline: none;
         padding: 15px 0;
         border-radius: 12px;
         font-size: 18px;
         cursor: pointer;
-      }
-
-      p {
-        width: 30%;
       }
     }
   }
