--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -19,16 +19,30 @@
   }
 
   nav {
-    ul {
+    .navbar {
       display: flex;
 
-      a,
       li {
         color: black;
         padding: 10px;
-        margin: 10px 20px;
+        margin: 15px 20px;
         font-size: 18px;
         cursor: pointer;
+      }
+
+      a {
+        color: black;
+        padding: 15px 20px;
+        margin: 10px 10px;
+        font-size: 18px;
+        cursor: pointer;
+
+        &:last-child {
+          border-radius: 25px;
+          color: white;
+          background-color: black;
+          border: 2px solid black;
+        }
       }
     }
   }
