--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -17,25 +17,52 @@
     display: flex;
     background-color: white;
     width: 1000px;
-    height: 500px;
+    height: 70vh;
     margin: 10px;
     border-radius: 12px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
     animation: slide-and-fade-up 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) both;
 
     .loginContainer {
-      width: 60%;
+      width: 55%;
       border-left: 2px solid #d1d1d1;
-      padding: 100px 20px 20px 20px;
+      padding: 50px 20px 20px 20px;
 
       h1 {
         text-align: center;
       }
+
+      .googleContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 25px 0;
+
+        .orContainer {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          hr {
+            width: 200px;
+            height: 1px;
+            border: 1px solid #d1d1d1;
+          }
+
+          p {
+            margin: 0 20px;
+            text-transform: uppercase;
+            color: grey;
+          }
+        }
+      }
     }
 
     .otherContainer {
-      width: 40%;
+      width: 45%;
       padding: 100px 20px 20px 20px;
+      background: url("../../public/assets/giraldo.jpg") center center no-repeat;
     }
 
     .closeButton {
